# poc

./: .gitignore  Dockerfile  README.md  event.json  handler.py  justfile_example  package.json  privacypolicyfinder.py  pyproject.toml  requirements.txt  save_model.py  serverless_example.yml
data/: linux_2019.txt  usenix_2016.txt
